@@ -49,9 +49,16 @@ typedef enum input_key {
   INPUT_KEY_Escape = 0x1b,
 
   INPUT_KEY_space = 0x20,
+  INPUT_KEY_exclam,
 
   INPUT_KEY_numbersign = 0x23,
-  INPUT_KEY_apostrophe = 0x27,
+  INPUT_KEY_dollar,
+  INPUT_KEY_ampersand = 0x26,
+  INPUT_KEY_apostrophe,
+  INPUT_KEY_parenleft,
+  INPUT_KEY_parenright,
+  INPUT_KEY_asterisk,
+  INPUT_KEY_plus,
   INPUT_KEY_comma = 0x2c,
   INPUT_KEY_minus = 0x2d,
   INPUT_KEY_period = 0x2e,
@@ -68,8 +75,11 @@ typedef enum input_key {
   INPUT_KEY_8,
   INPUT_KEY_9,
 
-  INPUT_KEY_semicolon = 0x3b,
-  INPUT_KEY_equal = 0x3d,
+  INPUT_KEY_colon = 0x3a,
+  INPUT_KEY_semicolon,
+  INPUT_KEY_less,
+  INPUT_KEY_equal,
+  INPUT_KEY_greater,
 
   INPUT_KEY_A = 0x41,
   INPUT_KEY_B,
@@ -98,6 +108,9 @@ typedef enum input_key {
   INPUT_KEY_Y,
   INPUT_KEY_Z,
 
+  INPUT_KEY_asciicircum = 0x5e,
+  INPUT_KEY_dead_circumflex = 0x5e,
+
   INPUT_KEY_a = 0x61,
   INPUT_KEY_b,
   INPUT_KEY_c,
@@ -125,6 +138,7 @@ typedef enum input_key {
   INPUT_KEY_y,
   INPUT_KEY_z,
 
+  INPUT_KEY_bar = 0x7c,
   INPUT_KEY_BackSpace = 0x7f,
 
   INPUT_KEY_KP_Enter = 0x8d,
