@@ -953,11 +953,11 @@
 [U+005E]
 .
 ...0
-..000
-.0.0.0
-...0
-...0
-...0
+..0.0
+.0...0
+.
+.
+.
 .
 
 [U+005F]
