@@ -28,6 +28,7 @@
 #include <stdio.h>
 
 #include <X11/Xlib.h>
+#include <X11/Xutil.h>
 #include <X11/keysym.h>
 
 #include "display.h"
@@ -44,11 +45,10 @@
 static void
 get_keysyms( XKeyEvent *event, input_event_t *fuse_event )
 {
-  int index;
   KeySym native, spectrum;
 
-  index = event->state & ShiftMask ? 1 : 0;
-  native = XLookupKeysym( event, index );
+  /* Get keysyms taking into account Shift, Caps_Lock, Mode_switch modifiers */
+  XLookupString( event, NULL, 0, &native, NULL );
   fuse_event->types.key.native_key = keysyms_remap( native );
 
   spectrum = XLookupKeysym( event, 0 );
